[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "langchain-pinecone>=0.2.11",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.1.1",
    "langchain-classic>=1.0.0",
    "beautifulsoup4>=4.14.3",
    "tiktoken>=0.12.0",
    "openai>=2.28.0",
    "unstructured>=0.21.5",
    "nltk>=3.9.3",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.42.0",
    "streamlit>=1.55.0",
    "streamlit-chat>=0.1.1",
    "tqdm>=4.67.3",
    "firecrawl-py>=4.19.0",
    "langsmith>=0.7.18",
    "pillow>=12.1.1",
    "certifi>=2026.2.25",
    "langchain-chroma>=1.1.0",
    "langchain-tavily>=0.2.17",
]
